--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,6 +3,7 @@
 # and commit this file to your remote git repository to share the goodness with others.
 
 tasks:
-  - init: pip install -r requirements.txt
+  - init: python3 -m venv venv
+    command: . venv/bin/activate && pip install -r requirements.txt && ./sandbox up nightly -v
 
 
